Bug 1133167 - Add CancelSeek call to FlushDecoding() r=cpearce,bholley a=lmandel

--HG--
extra : source : c6e50e83f7cbbd0d267fe5c3ec7bdaf568af8e09
extra : histedit_source : 2e86a6feb89d7d7ae71b7e99775f1216fd5e28c3